# task-management

./: Dockerfile  README.md  pyproject.toml
data/: .gitkeep
src/api/: main.py
src/api/static/: chat.html  upload.html  workspace.html
src/pmo_agent/: __init__.py  explain.py  export.py  ingest.py  init.py  llm_client.py  memory.py  optimize.py  prompts.py  rules.py  schemas.py  session_store.py
